monolith.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith
  labels:
    app: monolith
    service: monolith
spec:
  ports:
  - port: 9292
    name: http
  selector:
    app: monolith
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith
  labels:
    app: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  template:
    metadata:
      labels:
        app: monolith
    spec:
      serviceAccountName: monolith-sa
      containers:
      - name: monolith
        image: monolith:0.1.0
        ports:
        - containerPort: 9292
