gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monolith-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monolith
spec:
  hosts:
  - "*"
  gateways:
  - monolith-gateway
  http:
  - match:
    - uri:
        exact: /products
#    - uri:
#        prefix: /favorites
    route:
    - destination:
        host: monolith.default.svc.cluster.local
        port:
          number: 9292
  - match:
    - uri:
        exact: /hello
    - uri:
        prefix: /favorites
    route:
    - destination:
        host: favorites.default.svc.cluster.local
        port:
          number: 8383
